# cc-discord-notifier

./: .gitignore  README.md  pyproject.toml  state.json
.github/workflows/: keepalive.yml  notify.yml
claude-code-release-notifier/: README.md  pyproject.toml  state.json
claude-code-release-notifier/src/notifier/: github_client.py  models.py  parser.py  state.py  summarizer.py
claude-code-release-notifier/tests/: test_discord_client.py  test_summarizer.py
claude-code-release-notifier/tests/fixtures/: release_v2_1_81.json
claude-status-discord/: .dev.vars.example  README.md  pyproject.toml  wrangler.jsonc
claude-status-discord/doc/: claude-status-to-discord-guide.md
claude-status-discord/src/: entry.py  transform.py
claude-status-discord/tests/: test_transform.py
doc/: claude-code-discord-notifier-spec.md
src/notifier/: __init__.py  config.py  discord_client.py  github_client.py  main.py
tests/: test_parser.py  test_state.py
